# qt_painter

./: .travis.yml  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  appveyor.yml  new.des  perftest__create_shapes.py  perftest__good_create_shapes.py  perftest__random_create_shapes.py  replay.log.old  travis.yml
.circleci/: config.yaml  config.yml
etc/bsys/: Dockerfile  cmake_glavni.cm  projects.lst
etc/styles/: defaults.qss
qa/: tests.lst.orig
qa/perf_suites/: huge.lvi  huge2.lvi  huge3.lvi
qa/scripts/: make_diff_html.sh  test_runner.sh
qa/tests/copymove_crash1/: run.sh
qa/tests/different_selections/: Readme.txt
qa/tests/flowtest1/: Readme.txt
qa/tests/interactive_copymove_and_idle1/: run.sh
qa/tests/object_properties_generic/: Selection_Compare_1.txt  run.sh
qa/tests/runtime_and_highlights/: test.info
sqa/: tests.lst
sqa/etc/webrelated/: html_diff.template  (+1 more)
sqa/scripts/: add_readme.sh  circle_helper.sh  common.sh  test_runner.sh  testrail_binder.py
src/: main.cpp
src/commands/: CMakeLists.txt  Makefile  basic_commands.hpp  canvas_commands.hpp  cmake_install.cmake  command_manager.cpp  command_manager.hpp  command_option.hpp  copy_move_commands.hpp  delete_command.hpp  direct_command_base.hpp  gui_commands.hpp  icommand_base.hpp  interactive_command_base.hpp  interactive_load_save.hpp  load_save_commands.hpp  qa_commands.cpp  qa_commands.hpp  selection_commands.hpp  shape_creation_direct_commands.hpp  shape_creation_directive_commands.hpp  shape_creation_interactive_commands.hpp  shape_creator_commands.hpp  undo_manager.cpp  undo_manager.hpp  undo_redo_command.hpp
src/core/: application.hpp  basic_shape.hpp  callback.cpp  callback.hpp  core.hpp  design.cpp  design.hpp  event.hpp  iobject_pool.cpp  iobject_pool.hpp  ishape.hpp  postman.cpp  postman.hpp  renderer.cpp  renderer.hpp  runtime_environment.cpp  runtime_environment.hpp  runtime_pool.cpp  runtime_pool.hpp  selection.cpp  selection.hpp  service.cpp  service.h  service.hpp  shape_creator.cpp  shape_creator.hpp  shapes.cpp  shapes.hpp  stackdump.hpp  working_set.cpp  working_set.hpp
src/gui/: CMakeLists.txt  RQtree.cpp  RQtree.hpp  RegionQueryService.cpp  RegionQueryService.hpp  canvas.cpp  canvas.hpp  console.cpp  console.hpp  controller.cpp  controller.hpp  create_shape_gui.cpp  create_shape_gui.hpp  icons.hpp  main_window.cpp  main_window.hpp  modal_dialog.cpp  modal_dialog.hpp  pen_brush_gui.cpp  pen_brush_gui.hpp  qribbon.cpp  qribbon.hpp  qribbonbutton.cpp  qribbonbutton.hpp  qribbongroup.cpp  qribbongroup.hpp  qribbonwidget.cpp  qribbonwidget.hpp  rq_object.hpp  statusbar_manager.cpp  statusbar_manager.hpp  utilities.hpp
src/io/: CMakeLists.txt  command_interpreter.cpp  command_interpreter.hpp  log_reader.cpp  log_reader.hpp  messenger.cpp  messenger.cpp.orig  messenger.hpp  messenger.hpp.orig
src/painter/: basic_commands.hpp  basic_shape.hpp  canvas.cpp  canvas.hpp  command.cpp  command.hpp  command_manager.cpp  command_manager.hpp  command_option.hpp  controller.cpp  controller.hpp  copy_move_commands.hpp  create_shape_gui.cpp  create_shape_gui.hpp  defaults.qss  direct_command_base.hpp  gui_commands.hpp  icommand_base.hpp  icons.hpp  interactive_command_base.hpp  log_reader.hpp  main.cpp  main_window.cpp  main_window.hpp  node.hpp  pen_brush_gui.cpp  pen_brush_gui.hpp  qa_commands.hpp  qribbon.cpp  qribbon.hpp  qribbonbutton.cpp  qribbongroup.cpp  qribbongroup.h  qribbongroup.hpp  qribbonwidget.cpp  qribbonwidget.h  runtime_environment.cpp  runtime_environment.hpp  selection.hpp  selection_commands.hpp  (+6 more)
(+520 files in other folders)
